--- a/LogisticManageSystem/pom.xml
+++ b/LogisticManageSystem/pom.xml
@@ -5,7 +5,7 @@
   <groupId>edu.nju.lms</groupId>
   <artifactId>LogisticManageSystem</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>LogisticManageSystem</name>
   <url>http://maven.apache.org</url>
@@ -22,4 +22,8 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <modules>
+  	<module>Client</module>
+  	<module>Server</module>
+  </modules>
 </project>
