--- a/LogisticManageSystem/Server/pom.xml
+++ b/LogisticManageSystem/Server/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>Server</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>mysql</groupId>
+			<groupId></groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.37</version>
 		</dependency>
