--- a/LogisticManageSystem/Client/pom.xml
+++ b/LogisticManageSystem/Client/pom.xml
@@ -1,9 +1,22 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>edu.nju.lms</groupId>
-    <artifactId>LogisticManageSystem</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>Client</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>edu.nju.lms</groupId>
+		<artifactId>LogisticManageSystem</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<artifactId>Client</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.13</version>
+		</dependency>
+	</dependencies>
 </project>
