--- a/LogisticManageSystem/Client/pom.xml
+++ b/LogisticManageSystem/Client/pom.xml
@@ -18,5 +18,18 @@
 			<artifactId>poi</artifactId>
 			<version>3.13</version>
 		</dependency>
+		<dependency>
+			<groupId>edu.nju.lms</groupId>
+			<artifactId>Common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
+
 </project>
