--- a/LogisticManageSystem/Server/pom.xml
+++ b/LogisticManageSystem/Server/pom.xml
@@ -13,6 +13,18 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.37</version>
 		</dependency>
+		<dependency>
+			<groupId>edu.nju.lms</groupId>
+			<artifactId>Common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
 
