--- a/LogisticManageSystem/pom.xml
+++ b/LogisticManageSystem/pom.xml
@@ -1,30 +1,47 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>edu.nju.lms</groupId>
-  <artifactId>LogisticManageSystem</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+	<groupId>edu.nju.lms</groupId>
+	<artifactId>LogisticManageSystem</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
-  <name>LogisticManageSystem</name>
-  <url>http://maven.apache.org</url>
+	<name>LogisticManageSystem</name>
+	<url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <modules>
-  	<module>Client</module>
-  	<module>Server</module>
-  	<module>Common</module>
-  </modules>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+	</dependencies>
+	<modules>
+		<module>Client</module>
+		<module>Server</module>
+		<module>Common</module>
+	</modules>
+
+	<build>
+		<resources>
+			<resource>
+				<directory>Client/src/test/java</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>Common/src/test/java</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>Server/src/test/java</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+		<defaultGoal>install -DskipTests</defaultGoal>
+	</build>
 </project>
